fixed tests querying the edc catalog